crates/compiler/src/tests/e2e/bad/0047_array_type_annotation_parse_error/main.gom

fn id[T](x: T) -> T { x }

fn main() {
    let x = id[int32, string](42);
    string_println(int32_to_string(x));
}
